# cera-LADy

./: .gitignore  Dockerfile  README.md  docker-compose.yml  download_nltk_data.py  models_summary.md  pyproject.toml  requirements.txt
data-collector/: README.md  STATUS.md  collect_data.py  requirements.txt
data-collector/output/: exp1_llm_model_ranking_consolidated_results.csv  exp2_top_models_consolidated_results.csv  exp3_baseline_comparison_consolidated_results.csv
datasets-generator-v2/: README.md  config.json  generate_datasets_v2.py  llm_prompt.md  payload.json  requirements.txt
datasets-repairer/: README.md  __init__.py  corruption_detector.py  repair.py  repair_engine.py  requirements.txt
datasets/categories/: hotel.csv  hotels.csv  restaurant.csv
datasets/cera/: reviews-run1-explicit.xml
datasets/heuristic/: reviews-explicit-run1.xml
datasets/real-baselines/: real-laptops-1500-sents.xml
datasets/real-baselines-full/: SemEval 2015 laptops 2548.xml  SemEval 2015-16 restaurants 4048.xml  SemEval 2024 hotels 9793.xml
examples/: SemEval-2015-laptops-2548.csv
experiment_datasets/semeval_implitcits/: anthropic-haiku3.5-1300.xml  anthropic-haiku3.5-2000.xml  anthropic-haiku3.5-700.xml  anthropic-sonnet4-1300.xml  anthropic-sonnet4-2000.xml  anthropic-sonnet4-700.xml  openai-gpt4o-1300.xml  (+17 more)
experiment_docs/: experiment_settings.md  experiments_planning.md  llm_dataset_generation_prompt.md  llm_model_selection.md  run_baselines.md
experiment_results/: exp1_final.xlsx  exp1_findings.md  exp2_final.xlsx  exp2_findings.md  exp3_final.xlsx  exp3_findings.md
experiment_scripts/: rerun_exp.sh  run_baselines.sh  run_exp1.sh  run_exp2.sh  run_exp2_old.sh  run_exp3.sh  stop_exp.sh
process-manager/: README.md  debug_simple.py  debug_test.py  process_manager.py  test_runtime.sh
scripts/: README.md  predownload_models.py  run_all.sh  run_job.sh
src/: main.py  params.py
(+149 files in other folders)
