[tool.poetry]
name = "LADy"
version = "0.2.0"
description = "A System for Latent Aspect Detection"
authors = ["Kap Thang <dev@kapthang.dev>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"

# Core
pandas = ">=1.5,<3"
numpy = ">=1.23,<2"
scikit-learn = ">=1.0"
tqdm = ">=4.64"
natsort = ">=8.4"
pampy = ">=0.3"
returns = ">=0.22"
more-itertools = ">=10.1"
typing_extensions = ">=4.4"

# NLP
nltk = ">=3.7"
spacy = ">=3.7"
transformers = "4.37.2"           # pinned: torch 2.1.0 compat
sentence-transformers = "2.2.2"   # pinned: torch 2.1.0 compat
huggingface-hub = ">=0.19.3,<0.25" # pinned: sentence-transformers 2.2.2 needs cached_download
sentencepiece = ">=0.1.99"

# PyTorch: install separately (depends on your CUDA version)
#   pip: pip install torch --index-url https://download.pytorch.org/whl/cu121
#   conda: conda install pytorch pytorch-cuda=12.1 -c pytorch -c nvidia
#   docker: included in base image

# Topic modeling
gensim = ">=4.2"
bitermplus = ">=0.6.10"
contextualized_topic_models = "2.5.0"

# BERT ABSA (install with --no-deps to bypass stale torch<2 constraint)
# pip install --no-deps git+https://github.com/fani-lab/BERT-E2E-ABSA.git

# Evaluation
pytrec-eval-terrier = ">=0.5.5"

# Visualization
seaborn = ">=0.12"
matplotlib = "*"

[tool.poetry.group.dev.dependencies]
poethepoet = ">=0.22"

[tool.poe.tasks]
install__spacy = "python -m spacy download en_core_web_sm"
install__nltk_data = "python -c \"import nltk; nltk.download('stopwords'); nltk.download('punkt'); nltk.download('punkt_tab'); nltk.download('wordnet')\""
install__octis.shell = "cd src/octis && pip install ."

post_install = [
  "install__spacy",
  "install__nltk_data",
  "install__octis",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
